--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -1,6 +1,6 @@
 <%- include('header') -%>
 
-<div class="compose-form">
+<div class="header-less-body">
   <h1>Compose</h1>
   <form action="/compose" method="POST">
     <strong><label for="title-input">Title</label></strong>
