--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,8 +1,7 @@
 <%- include('header') -%>
 
-    <div style="height: 1rem;"></div>
-
-      <!-- -->
+  <div class="header-less-body">
+    <!-- -->
     <% for(let i=0;i<postList.length;i++){ %>
 
       <div class="container-fluid blog-post">
@@ -12,5 +11,7 @@
 
     <% } %>
     <!-- -->
+
+  </div>
     
 <%- include('footer') -%>
