--- a/views/header.ejs
+++ b/views/header.ejs
@@ -44,10 +44,10 @@
           <a class="nav-link" href="/compose">Compose</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">About Us</a>
+          <a class="nav-link" href="/about">About Us</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Contact Us</a>
+          <a class="nav-link" href="/contact">Contact Us</a>
         </li>
       </ul>
     </div>
