--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,4 +1,4 @@
-<footer class="page-footer font-small blue bg-light">
+<footer class="page-footer font-small blue bg-light" style="position:fixed; bottom:0; ">
 
     <!-- Copyright -->
     <div class="footer-copyright text-center py-3">© 2021 Copyright:
