--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,7 +1,7 @@
-<footer class="page-footer font-small blue bg-light" style="position:fixed; bottom:0; ">
+<footer class="page-footer font-small blue bg-secondary" style="position:fixed; bottom:0; ">
 
     <!-- Copyright -->
-    <div class="footer-copyright text-center py-3">© 2021 Copyright:
+    <div class="footer-copyright text-center py-3 text-light">© 2021 Copyright:
       <a href="https://github.com/Junaidhassan99"> Junaid Hassan</a>
     </div>
     <!-- Copyright -->
