--- a/views/header.ejs
+++ b/views/header.ejs
@@ -16,39 +16,39 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-secondary">
+      <a class="navbar-brand text-light" href="/">Daily Journal</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarNav"
+        aria-controls="navbarNav"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse a-tags-div" id="navbarNav">
+        <ul class="navbar-nav">
+          <!-- <div class="spacer"></div> -->
 
-
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Daily Journal</a>
-    <button
-      class="navbar-toggler"
-      type="button"
-      data-toggle="collapse"
-      data-target="#navbarNav"
-      aria-controls="navbarNav"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse a-tags-div" id="navbarNav">
-      <ul class="navbar-nav">
-        <!-- <div class="spacer"></div> -->
-
-        <li class="nav-item active">
-          <a class="nav-link" href="/"
-            >Home <span class="sr-only">(current)</span></a
-          >
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/compose">Compose</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/about">About Us</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/contact">Contact Us</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
+          <li class="nav-item active">
+            <a class="nav-link text-light" href="/"
+              >Home <span class="sr-only">(current)</span></a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-light" href="/compose">Compose</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-light" href="/about">About Us</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-light" href="/contact">Contact Us</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </body>
+</html>
