--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -9,7 +9,7 @@
     <br />
     <strong><label for="post-input">Post</label></strong>
     <br />
-    <input class="post-input" type="text" name="compose_post" />
+    <input class="post-input" type="text" name="compose_post" autocomplete="off"/>
     <br />
     <input class="button-input" type="submit" value="Publish" />
   </form>
