input of type text replaced with text area

--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -9,7 +9,13 @@
     <br />
     <strong><label for="post-input">Post</label></strong>
     <br />
-    <input class="post-input" type="text" name="compose_post" autocomplete="off"/>
+    <!-- <input class="post-input" type="text" name="compose_post" autocomplete="off"/> -->
+    <textarea
+      name="compose_post"
+      class="post-input"
+      rows="10"
+      style="width: 100%"
+    ></textarea>
     <br />
     <input class="button-input" type="submit" value="Publish" />
   </form>
